--- a/www/index.html
+++ b/www/index.html
@@ -30,11 +30,12 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/app.routes.js"></script>
-    <script src="js/app.run.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/app.routes.js"></script>
+    <script src="app/app.run.js"></script>
+    <script src="app/find/find.controller.js"></script>
+    <script src="app/find/find.service.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
