--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,6 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="lib/ionic-ion-tinder-cards/ionic.tdcards.css" rel="stylesheet">
 
 
@@ -37,9 +36,10 @@
     <script src="app/app.routes.js"></script>
     <script src="app/app.run.js"></script>
     <script src="app/find/find.controller.js"></script>
-    <script src="app/find/find.service.js"></script>
     <script src="lib/ionic-ion-tinder-cards/ionic.tdcards.js"></script>
     <script src="lib/collide/collide.js"></script>
+    <script src="app/services/songs.service.js"></script>
+    <script src="app/services/app.constants.js"></script>
 
 
   </head>
